--- a/app/blocks/button/nd-button.pug
+++ b/app/blocks/button/nd-button.pug
@@ -16,7 +16,7 @@ mixin nd-button-icon(newtag, data)
       if data.iconBlock
         +e.SPAN(class="__icon_" + data.icon)
       else
-        +icon(icon)(class="__icon_" + data.icon)
+        +icon(data.icon)(class="__icon_" + data.icon)
     if !data.notext
       +e.SPAN.text
         block
