--- a/app/blocks/layout-header/layout-header.scss
+++ b/app/blocks/layout-header/layout-header.scss
@@ -206,7 +206,7 @@
       @include rule(margin-left, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 30));
     }
 
-    .layout-space-active & {
+    .layout-space-active &, .layout-offer-active & {
       opacity: 0;
       pointer-events: none;
     }
