--- a/app/blocks/modal/modal.scss
+++ b/app/blocks/modal/modal.scss
@@ -348,4 +348,15 @@
       @include rule(margin-left, (xl: 13px, xlg: 13, lg:13, md: 13, sm: 13));
     }
   }
+
+  &__sup-button {
+    width: 100%;
+
+    @include rule(padding-left, (xl: 40px, xlg: 40, lg: 40, md: 40, sm: 40));
+    @include rule(padding-left, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+
+    &:not(:first-child) {
+      @include rule(margin-top, (xl: 21px, xlg: 21, lg: 21, md: 21, sm: 21));
+    }
+  }
 }
