--- a/app/blocks/space-gallery/space-gallery.pug
+++ b/app/blocks/space-gallery/space-gallery.pug
@@ -1,23 +1,21 @@
 mixin space-gallery()
   +b.space-gallery&attributes(attributes)
     +e.wrapper.nd-hide-sm
-      +e.PICTURE.image_big
+      +e.PICTURE.image_big(data-fancybox="space-gallery" data-target='space-gallery' data-src='assets/images/nd/space-hq-31.jpg')
         source(srcset='assets/images/nd/space31.jpg')
         img(src='assets/images/nd/space31.jpg')
-      +e.PICTURE.image_small._small_top
+      +e.PICTURE.image_small._small_top(data-fancybox="space-gallery" data-target='space-gallery' data-src='assets/images/nd/space-hq-32.jpg')
         source(srcset='assets/images/nd/space32.jpg')
         img(src='assets/images/nd/space32.jpg')
-      +e.PICTURE.image_small._small_bottom
+      +e.PICTURE.image_small._small_bottom(data-fancybox="space-gallery" data-target='space-gallery' data-src='assets/images/nd/space-hq-33.jpg')
         source(srcset='assets/images/nd/space33.jpg')
         img(src='assets/images/nd/space33.jpg')
-      +nd-button('button')._pad10._h22._fz13.__button.js-fancygallery(data-targets='space-gallery' type="button") View gallery
-      +nd-link().__hidden-images(href='assets/images/nd/space-hq-31.jpg' data-target='space-gallery' hidden)
-      +nd-link().__hidden-images(href='assets/images/nd/space-hq-32.jpg' data-target='space-gallery' hidden)
-      +nd-link().__hidden-images(href='assets/images/nd/space-hq-33.jpg' data-target='space-gallery' hidden)
+      +nd-button('button')._pad10._h22._fz13.__button.js-fancygallery( data-targets='space-gallery' type="button") View gallery
     +e.wrapper.nd-hide-from-sm
       +gallery({
         images: ["assets/images/nd/space31.jpg", "assets/images/nd/space32.jpg", "assets/images/nd/space33.jpg"],
         buttons: true,
-        buttonsClass: "_small"
+        buttonsClass: "_small",
+        fancygallery: "space-gallery-m"
       }).js-nd-gallery
     block
