--- a/app/components/user-menu-panel/nd-user-menu-panel.pug
+++ b/app/components/user-menu-panel/nd-user-menu-panel.pug
@@ -31,17 +31,7 @@ mixin nd-user-menu-panel(host, noUser, isSearch)
                 path(d="M19.58 8.58H7.57C7.13 8.58 6.77 8.22 6.77 7.78C6.77 7.34 7.13 6.98 7.57 6.98H19.59C20.03 6.98 20.39 7.34 20.39 7.78C20.39 8.22 20.03 8.58 19.58 8.58Z" fill="#0085FF")
                 path(d="M13.9 13.74H7.57C7.13 13.74 6.77 13.38 6.77 12.94C6.77 12.5 7.13 12.14 7.57 12.14H13.9C14.34 12.14 14.7 12.5 14.7 12.94C14.7 13.38 14.34 13.74 13.9 13.74Z" fill="#0085FF")
             +e.text Messages
-        //- +e.LI.item
-          +e.A.link(href="#")
-            +nd-user-link('', '', '', 'div')
-              //- if host
-              //-   +e.SVG.icon_building(viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg")
-              //-     path(d="M12.4514 1.57629C12.5486 1.57629 12.6459 1.57629 12.7432 1.67481L23.249 11.7237C23.3463 11.8222 23.3463 11.9207 23.3463 12.0192V21.9696C23.3463 22.2651 23.1518 22.4622 22.8599 22.4622H2.0428C1.75097 22.4622 1.55642 22.2651 1.55642 21.9696V12.0192C1.55642 11.9207 1.6537 11.7237 1.6537 11.7237L12.1595 1.67481C12.2568 1.57629 12.4514 1.57629 12.4514 1.57629ZM12.4514 0C11.965 0 11.4786 0.197037 11.0895 0.59111L0.583658 10.5415C0.194553 10.9355 0 11.5266 0 12.0192V21.9696C0 23.0533 0.875486 24.0385 2.0428 24.0385H22.9572C24.0272 24.0385 25 23.1518 25 21.9696V12.0192C25 11.4281 24.8054 10.9355 24.4163 10.5415L13.9105 0.59111C13.5214 0.197037 13.035 0 12.4514 0Z" fill="black")
-              //-     path(d="M4.37782 17.0436C3.98871 17.0436 3.59961 16.6496 3.59961 16.2555V12.7088L6.61517 9.65477C6.907 9.35922 7.39338 9.35922 7.68521 9.65477C7.97704 9.95033 7.97704 10.4429 7.68521 10.7385L5.05875 13.3985V16.354C5.15603 16.7481 4.8642 17.0436 4.37782 17.0436Z" fill="#0085FF")
-              //- else
-              //-   +e.SVG.icon_heart(viewBox="0 0 26 24" fill="none" xmlns="http://www.w3.org/2000/svg")
-                  path(d="M8.03276 1.47636C9.50428 1.47636 10.9383 1.9654 12.0818 2.84198L13.0097 3.55248L13.9376 2.84198C15.0811 1.95617 16.5151 1.47636 17.9866 1.47636C19.7393 1.47636 21.3796 2.14072 22.6074 3.34948C25.1568 5.85928 25.1568 9.95617 22.6074 12.466L13.0003 21.9146L3.412 12.466C2.1748 11.2572 1.49996 9.63322 1.49996 7.90773C1.49996 6.18224 2.1748 4.55825 3.412 3.34948C4.63983 2.14072 6.28006 1.47636 8.03276 1.47636ZM17.9772 0C16.2152 0 14.4531 0.56286 13.0097 1.67935C11.5475 0.56286 9.79484 0 8.03276 0C5.97076 0 3.90875 0.765859 2.35288 2.30681C-0.777619 5.3887 -0.777619 10.4268 2.35288 13.5087L13.0097 24L23.6665 13.5087C26.797 10.4268 26.797 5.3887 23.6665 2.30681C22.0919 0.765859 20.0299 0 17.9772 0Z" fill="black")
-                  path(d="M13.9185 17.9469C13.7217 17.9469 13.5343 17.8731 13.3843 17.7347C13.0937 17.4487 13.0937 16.9781 13.3843 16.692L19.6453 10.5282C19.9358 10.2422 20.4139 10.2422 20.7044 10.5282C20.995 10.8143 20.995 11.2849 20.7044 11.5709L14.4434 17.7347C14.3028 17.8731 14.1154 17.9469 13.9185 17.9469Z" fill="#0085FF")
+
       else if isSearch
         +e.LI.item_filter
           +e.A.link.js-toggle-modal(data-modal-target="filter-multi" data-modal-mode="default"  data-modal-user-panel="visible")
@@ -64,7 +54,7 @@ mixin nd-user-menu-panel(host, noUser, isSearch)
                 path(d="M13.25,5.87a.64.64,0,0,1-.46-1.1L17.44,0l4.67,4.67a.65.65,0,0,1-.92.91L17.46,1.85,13.71,5.68A.62.62,0,0,1,13.25,5.87Z" fill="#0085ff")
             +e.text Sort
         +e.LI.item
-          +e.A.link(href="#")
+          +e.A.link.js-toggle-modal(href="#" data-modal-target="modal-support" data-modal-user-panel="visible")
             +nd-user-link('', '', '', 'div')
               +e.SVG.icon_support(viewBox="0 0 24.45 23.6" fill="none" xmlns="http://www.w3.org/2000/svg")
                 path(d="M7.7,23.6a.46.46,0,0,1-.23-.05A.6.6,0,0,1,7.1,23V19.58A7.7,7.7,0,0,1,7.7,4.2h7.2a.6.6,0,0,1,0,1.2H7.7a6.5,6.5,0,0,0,0,13,.6.6,0,0,1,.6.6v2.55l3-3a.56.56,0,0,1,.42-.18H15a6.69,6.69,0,0,0,6.33-4.68.6.6,0,0,1,1.14.36A7.89,7.89,0,0,1,15,19.6H12L8.12,23.42A.56.56,0,0,1,7.7,23.6Z")
@@ -80,7 +70,7 @@ mixin nd-user-menu-panel(host, noUser, isSearch)
                 path(d="M7.65,14.89a.65.65,0,0,1-.47-1.1l3.51-3.64L7.09,6.42A.65.65,0,0,1,8,5.52l4.47,4.63L8.12,14.69A.67.67,0,0,1,7.65,14.89Z" fill="#0085ff")
             +e.text Sign in
         +e.LI.item
-          +e.A.link(href="#")
+          +e.A.link.js-toggle-modal(href="#" data-modal-target="modal-support" data-modal-user-panel="visible")
             +nd-user-link('', '', '', 'div')
               +e.SVG.icon_support(viewBox="0 0 24.45 23.6" fill="none" xmlns="http://www.w3.org/2000/svg")
                 path(d="M7.7,23.6a.46.46,0,0,1-.23-.05A.6.6,0,0,1,7.1,23V19.58A7.7,7.7,0,0,1,7.7,4.2h7.2a.6.6,0,0,1,0,1.2H7.7a6.5,6.5,0,0,0,0,13,.6.6,0,0,1,.6.6v2.55l3-3a.56.56,0,0,1,.42-.18H15a6.69,6.69,0,0,0,6.33-4.68.6.6,0,0,1,1.14.36A7.89,7.89,0,0,1,15,19.6H12L8.12,23.42A.56.56,0,0,1,7.7,23.6Z")
