--- a/app/pages/newest/search/search-types-v3.pug
+++ b/app/pages/newest/search/search-types-v3.pug
@@ -59,7 +59,7 @@ block content
 
 
     +e.column_start._start_space._popup(data-layout="space")
-      +e.wrapper
+      +e.wrapper.js-scrollbar-layout
         +space-description-v2
         +space-description-panel
 
@@ -103,7 +103,7 @@ block content
                           b £ 2,400 per month
 
     +e.column_start._start_offer._popup(data-layout="offer")
-      +e.wrapper
+      +e.wrapper.js-scrollbar-layout
         +offer-description-v2
 
     +e.column_header._popup(data-layout="space,offer,list")
