--- a/app/pages/newest/search/search-v3.pug
+++ b/app/pages/newest/search/search-v3.pug
@@ -136,6 +136,12 @@ block content
               else
                 +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=(item.value), data-modal-item-type="sort")
 
+  +modals('DIV')
+    +modal({header: {title: 'Support'}, footer: false})#modal-support
+      +e.list
+        +nd-button-icon('a', {iconLeft: true, icon: 'sup-call'})._icon_start._border._border_blue._border_bw2.__sup-button(href="#") Call
+        +nd-button-icon('a', {iconLeft: true, icon: 'sup-mail'})._icon_start._border._border_blue._border_bw2.__sup-button(href="#") Email
+        +nd-button-icon('a', {iconLeft: true, icon: 'sup-chat'})._icon_start._border._border_blue._border_bw2.__sup-button(href="#") Chat
 
 
 
