--- a/app/pages/newest/search/search-types-v3.pug
+++ b/app/pages/newest/search/search-types-v3.pug
@@ -25,9 +25,11 @@ block content
     +e.column_results
       +e.wrapper
         +nd-section.md-only-visibility-hidden
-          +nd-section-header
-            +nd-section-title._fz30._sm-fz22._ls-015 Private Office in London
-            +e.text_fz15._ls0._gray Looking for workspace type, Any team size and Any price
+          +e.filter-header
+            +nd-section-header
+              +nd-section-title._fz30._sm-fz22._ls-015 Private Office in London
+              +e.text_fz15._ls0._gray Looking for workspace type, Any team size and Any price
+            +modal-output({placeholder: 'Sort by'}).js-toggle-modal.nd-hide-sm(data-modal-target="filter-sort" data-modal-output-type="sort" )
         +nd-results._v2
           each item in getData('new-nd-spaces-search-offer.json')
             +nd-results-item._mt23
@@ -123,6 +125,7 @@ block content
                 else
                   +e.INPUT.input(name=item.name, value=item.value, type="radio", data-modal-item, data-modal-item-value=item.title, data-modal-item-type="city")
                 +e.SPAN.content!=item.title
+
       +modal({header: {title: 'Office type'}, describe: 'Pick the type of workspace you want.', footer: false})#filter-type
         +e.list
           each item in [{title: 'Private Office', value: 'Private Office', name: 'team', value2: 'Private Office', class: "_offer_green", checked: true, wrapClass: 'is-green'}, {title: 'Hot Desk', value: 'Hot Desk', name: 'team', value2: 'Hot Desk', class: "_offer_orange", wrapClass: 'is-orange'}, {title: 'Fixed Desk', value: 'Fixed Desk', name: 'team', value2: 'Fixed Desk', class: "_offer_red", wrapClass: 'is-red'}, {title: 'Meeting Room', value: 'Meeting Room', name: 'team', value2: 'Meeting Room', class: "_offer_blue", wrapClass: 'is-blue'}]
@@ -131,14 +134,18 @@ block content
                 +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=item.value2, data-modal-item-wrapper-class=item.wrapClass data-modal-item-type="offer", checked)
               else
                 +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=item.value2, data-modal-item-wrapper-class=item.wrapClass data-modal-item-type="offer")
+
       +modal({header: {title: 'Team size'}, describe: 'Start-up, scale-up, big business or just you – we have a perfect match for you.', footer: false})#filter-team
         +e.list
           each item in [{title: '1', value: '1', name: 'team', value2: '1'}, {title: '2 - 4', value: '2 - 4', name: 'team'}, {title: '5 - 7', value: '5 - 7', name: 'team'}, {title: '8 - 10', value: '8 - 10', name: 'team'}, {title: '11 - 15', value: '11 - 15', name: 'team'}, {title: '16 - 20', value: '16 - 20', name: 'team'}, {title: '21 - 30', value: '21 - 30', name: 'team'}, {title: '31 +', value: '31 +', name: 'team', value2: '31 +'} ]
             +styled-radio(item.title)._team.__item
               +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=(item.value2 || item.value), data-modal-item-type="team")
+
     +e.FIELDSET.fieldset
       +modal({header: {title: 'Filter'}, footer: {class: '_range', view: 'range'}})#filter-multi
         +nd-range({output: {minLabel: 'Min', maxLabel: 'Max', max: 'maxPrice', min: 'minPrice', formboxClass: '_bg-white _sm-h50', inputClass: '_sm-h50'}})(data-start="[0, 5000]" data-connect="[false, true, false]" data-step="10" data-margin="30" data-min="0" data-max="10000" data-currency="£" data-modal-item data-modal-item-type="multi").__range
+
+    +e.FIELDSET.fieldset
       +modal({header: {title: 'Sort by'}, footer: false})#filter-sort
         +e.list
           each item in [{title: 'Popular', value: 'Popular', name: 'sort', /*checked: true*/}, {title: 'Relevance', value: 'Relevance', name: 'sort'}, {title: 'Price ascending', value: 'Price ascending', name: 'sort'}, {title: 'Price descending', value: 'Price descending', name: 'sort'}]
@@ -147,6 +154,7 @@ block content
                 +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=(item.value), data-modal-item-type="sort" checked)
               else
                 +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=(item.value), data-modal-item-type="sort")
+
 block panels
   +share-popover#share-popover
 
