fix scrollbar in list on serch type page

--- a/app/pages/newest/search/search-types-v3.pug
+++ b/app/pages/newest/search/search-types-v3.pug
@@ -66,7 +66,7 @@ block content
         +space-description-panel
 
     +e.column_end._popup(data-layout="list,space,offer")
-      +e.wrapper
+      +e.wrapper.js-scrollbar-layout
         +nd-results._v2
           +e.divider.nd-hide-from-md
             +space-type._gray._fz12.__type
