update filter for search

--- a/app/blocks/filter-section/filter-section.pug
+++ b/app/blocks/filter-section/filter-section.pug
@@ -16,4 +16,4 @@ mixin filter-section-header()
     +e.group
       +nd-filter.__filter
     +e.item.nd-hide-sm
-      +modal-output-special({placeholder: 'Filter'})._filter._no-icon.js-toggle-modal(data-modal-target="filter-multi" data-modal-mode="default" data-modal-output-type="multi" data-modal-user-panel="visible")
+      +modal-output-special({placeholder: 'Filter'})._filter._no-icon.js-open-modal-filter
