--- a/app/blocks/offer-table/offer-table.scss
+++ b/app/blocks/offer-table/offer-table.scss
@@ -417,13 +417,15 @@
     }
 
     &_v2 {
+      max-width: 100%;
 
       #{$b} {
         &__row {
           min-width: 133px;
+          overflow: hidden;
 
           @include screen('xl', max, 2) {
-            min-width: 120px;
+            min-width: 100px;
           }
 
           @include rule(min-width, (xlg: 120, lg: 133, md: 133, sm: 0));
