--- a/app/components/user-menu-panel/nd-user-menu-panel.pug
+++ b/app/components/user-menu-panel/nd-user-menu-panel.pug
@@ -34,7 +34,7 @@ mixin nd-user-menu-panel(host, noUser, isSearch)
 
       else if isSearch
         +e.LI.item_filter
-          +e.A.link.js-toggle-modal(data-modal-target="filter-multi" data-modal-mode="default"  data-modal-user-panel="visible")
+          +e.A.link.js-open-modal-filter
             +nd-user-link('', '', '', 'div')
               +e.SVG.icon_filter(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.8 21.1")
                 path(d="M21.25,4.2H7.35a.65.65,0,0,1,0-1.3h13.9a.65.65,0,1,1,0,1.3Z")
