--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -113,6 +113,7 @@ include ../blocks/map/map
 include ../blocks/media/media
 include ../blocks/message-form/message-form
 include ../blocks/message/message
+include ../blocks/modal-filter/modal-filter
 include ../blocks/modal-output/modal-output
 include ../blocks/modal/modal
 include ../blocks/modals/modals
