search big filter

--- a/app/blocks/form-elements/nd-form-elements.pug
+++ b/app/blocks/form-elements/nd-form-elements.pug
@@ -162,7 +162,7 @@ mixin check-button(data)
       block
 
 mixin nd-range(data)
-  +b.nd-range&attributes(attributes).js-nd-range
+  +b.js-nd-range.nd-range__&attributes(attributes)
     +e.slider(data-nd-range-container)
     if data.output
       +e.output(data-nd-range-output)
