--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -237,6 +237,7 @@ $nd-modal-output-placeholder: #555e68;
 $nd-color-small-offer: #dfe1e2;
 $nd-color-map-border: #b7b7b7;
 $nd-color-border7: #ebebec;
+$nd-clear-disabled: #a8b7ba;
 
 // ##########
 // Transitions
