--- a/app/blocks/filter-section/filter-section.pug
+++ b/app/blocks/filter-section/filter-section.pug
@@ -16,4 +16,7 @@ mixin filter-section-header()
     +e.group
       +nd-filter.__filter
     +e.item.nd-hide-sm
-      +modal-output-special({placeholder: 'Filter'})._filter._no-icon.js-open-modal-filter
+      +modal-output-special({placeholder: 'Filter'})._filter.js-open-modal-filter
+        +e.BUTTON.clear.js-clear-modal-filter
+          +icon('cross')
+          +e.counter(data-modal-filter-output)
