last update for filter search

--- a/app/blocks/filter-section/filter-section.pug
+++ b/app/blocks/filter-section/filter-section.pug
@@ -17,6 +17,6 @@ mixin filter-section-header()
       +nd-filter.__filter
     +e.item.nd-hide-sm
       +modal-output-special({placeholder: 'Filter'})._filter.js-open-modal-filter
-        +e.BUTTON.clear.js-clear-modal-filter
+        +e.BUTTON.clear.js-clear-modal-filter(data-modal-filter-clear-always)
           +icon('cross')
           +e.counter(data-modal-filter-output)
